dubbo scripts